Fix input overlaping

--- a/themes/jeo-theme/assets/scss/3-layout/_l-header.scss
+++ b/themes/jeo-theme/assets/scss/3-layout/_l-header.scss
@@ -193,6 +193,11 @@ header.site-header {
             margin-bottom: 60px;
             display: block;
             margin-top: 100px;
+
+            @media (max-height: 570px) {
+                margin-top: 20px;
+                margin-bottom: 20px;
+            }
         }
 
         .content-limiter {
